HTML formatting, less information on research

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
         -->
 
-<!-- TITLE: center,fit slide to single page, swipe to navigate  -->
 
 </head>
 <body>
+    <!-- NAVIGATION BAR  -->
     <section id ="nav_section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <a class="navbar-brand" href="#"></a>
@@ -37,20 +37,15 @@
                 <li class="nav-item active">
                 <a class="nav-link" href="https://www.linkedin.com/in/acard/">LINKEDIN<span class="sr-only">(current)</span></a>
               </li>
-
-
-                </ul>
-
-              </div>
+            </ul>
+          </div>
         </nav>
     </section>
 
-
-<section id ="carousel_section h-100">
+    <!--- CAROUSEL INDICATORS -->
 
     <section id ="carousel_section h-100">
-
-        <header>
+    <header>
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -58,79 +53,90 @@
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner" role="listbox">
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <!-- The image you have chosen here is really low resolution maybe you can maybe use a gradient which might be more slick -->
-          <div class="carousel-item active align-items-center" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
-              <div class="carousel-header">
-                  <h1 class="carousel-item__carousel-header--title d-flex justify-content-center">Adriana Cardenas</h1>
-              </div>
-              <div class="carousel-content d-flex justify-content-center">
-                  <h3 class="carousel-item__carousel-content--items">Technology</h3>
-                  <h3 class="carousel-item__carousel-content--items">Biochemistry</h3>
-                  <h3 class="carousel-item__carousel-content--items">Research</h3>
-              </div>
+
+
+    <!-- SLIDE ONE - LANDING PAGE -->
+      <div class="carousel-item active align-items-center" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
+          <div class="carousel-header">
+              <h1 class="carousel-item__carousel-header--title d-flex justify-content-center">Adriana Cardenas</h1>
           </div>
-
-
-
-          <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
-              <div class="carousel-content2">
-                  <h1><b>EDUCATION</b></h1>
-
-
-            <p><i>(current)</i>
-            <br><strong>University of Texas</strong>
-            <br>Class of 2019
-            <br><i>Austin, TX</i></p>
-
-        <p>B.S.A in Biochemistry
-        <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
-        <br>Minor in Psychology</p>
-
-              </div>
-
-
+          <div class="carousel-content d-flex justify-content-center">
+              <h3 class="carousel-item__carousel-content--items">Technology</h3>
+              <h3 class="carousel-item__carousel-content--items">Biochemistry</h3>
+              <h3 class="carousel-item__carousel-content--items">Research</h3>
           </div>
+      </div>
+
+
+
+      <!-- Slide Two - EDUCATION -->
+      <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
+          <div class="carousel-content2">
+              <h1><b>EDUCATION</b>
+              </h1>
+                <p>
+                    <i>(current)</i>
+                    <br><strong>University of Texas</strong>
+                    <br>Class of 2019
+                    <br><i>Austin, TX</i>
+                </p>
+
+                <p>
+                    B.S.A in Biochemistry
+                    <br><a href="https://www.cs.utexas.edu/undergraduate-program/academics/elements-computing" >Elements of Computing Certificate</a>
+                    <br>Minor in Psychology
+                </p>
+          </div>
+      </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
-              <div class="carousel-content3">
-                  <h1><b>RESEARCH</b></h1>
-                  <i>
+      <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
+          <div class="carousel-content3">
+              <h1><b>RESEARCH</b>
+              </h1>
+              <h3><i>1. Gonzalez-Lima Lab</i>
+              </h3>
+              <h4>Texas Consortium of Behavioral Neuroscience
+              </h4><i>Undergraduate Research Assistant working under Lida Huang, PhD</i><br>
+                <i>(started August 2017)</i><br><br>
 
-
-            <h3>1.Gonzalez-Lima Lab</h3>
-            <h4>Texas Consortium of Behavioral Neuroscience</h4>
-            <i>Undergraduate Research Assistant working under Lida Huang, PhD</i><br>
-            <i>(started August 2017)</i><br>
-            <br>
-            <!--- Script for cleaner view-->
-
-
-            <!-- -->
-            <p>
-            <b><i>Project Involvement (+)</i></b>
-            <ol>
-            <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 18 and over</a></div></li>
-                <li><div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 45 and over</a></div></li>
-                      <li><div>Computer vision and Emotion</div></li>
-            </ol>
-            </p>
-                                     <!-- -->
-            <p><b><i>Responsibilities (+)</i></b>
-            <ul>
-            <li>Analysis of EEG files using MATLAB</li>
-            <li>Efficient refinement of experimental data</li>
-            <li>Bridging of technology with biomolecular interactions</li>
-            </ul>
-                  </i>
-
-                  <h3><i>2. Synthesis and Biological Recognition Stream</i></h3>
-                  <h4>Freshman Research Initiative at University of Texas</h4>
-                  <i>Undergraduate Research Assistant working under Elizabeth Ilardi</i>
-                  <i>(August 2014 to May 2015)</i>
-                  <br>
-
+                        <!---->
+                <!--<p>
+                    <b><i>Project Involvement (+)</i></b>
+                    <ol>
+                        <li>
+                            <div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 18 and over</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div><a href="https://labs.la.utexas.edu/gonzalez-lima/">Cognitive Enhancement in Adults, Ages 45 and over</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div>Computer vision and Emotion
+                            </div>
+                        </li>
+                    </ol>
+                </p>
+                        
+                <p>
+                    <b><i>Responsibilities (+)</i></b>
+                        <ul>
+                            <li>Analysis of EEG files using MATLAB
+                            </li>
+                            <li>Efficient refinement of experimental data
+                            </li>
+                            <li>Bridging of technology with biomolecular interactions
+                            </li>
+                        </ul>
+--->
+                      <h3><i>2. Synthesis and Biological Recognition Stream</i>
+                      </h3>
+                      <h4>Freshman Research Initiative at University of Texas
+                      </h4>
+                      <i>Undergraduate Research Assistant working under Elizabeth Ilardi</i><br>
+                      <i>(August 2014 to May 2015)</i>
+                      <br>
+<!--
                   <p>
                       <b><i>Responsibilities (+)</i></b>
                       <ul>
@@ -143,7 +149,7 @@
                       </ul>
 
                   </p>
-
+-->
               </div>
           </div>
         </div>
