improved resume, margins added

--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>ADRIANA CARDENAS</h1>
-    <h2><a href = " ">DOWNLOAD PDF</a></h2>
+    <!--<h2><a href = " ">DOWNLOAD PDF</a></h2> -->
     <section>
         <br>
         <h1 id ="edu_section">EDUCATION</h1>
