--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
 
     <!-- SLIDE ONE - LANDING PAGE -->
       <div class="carousel-item active align-items-center" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
+          <div class="container">
+  <!-- Content here -->
+
           <div class="carousel-header">
               <h1 class="carousel-item__carousel-header--title d-flex justify-content-center">Adriana Cardenas</h1>
           </div>
@@ -65,7 +68,7 @@
               <h3 class="carousel-item__carousel-content--items">Biochemistry</h3>
               <h3 class="carousel-item__carousel-content--items">Research</h3>
           </div>
-
+          </div>
       </div>
 
 
@@ -88,6 +91,7 @@
                     <br>Minor in Psychology
                 </p>
           </div>
+
       </div>
           <!-- Slide Three - Set the background image for this slide in the line below -->
       <div class="carousel-item" style="background-image: linear-gradient(180deg, #ffffff, #d3e4ff)">
