mobile compatible texts p, h1, h2, text-muted

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-right"> student at UT Austin, full stack Intern</h2>
+                        <h2 class="text-right"> student at UT Austin, full stack developer</h2>
 
                     </div>
                 </div>
