--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
     <!--- Web Title -->
    <title>Adriana Cardenas</title>
+    <link rel="icon" href="./image/logo.png">
 
 
     <!--- Required meta tags -->
