--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 
     <!--- Web Title -->
    <title>About</title>
+        <link rel="icon" href="./image/logo.png">
 
 
     <!--- Required meta tags -->
