--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
 
     <!--- Web Title -->
    <title>Contact Me</title>
+        <link rel="icon" href="./image/logo.png">
 
 
     <!--- Required meta tags -->
