toggle icon size increase

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@
         </div>
 
         <button class="navbar-toggler order-2" type="button" data-toggle="collapse" data-target="#NavDropDown" aria-controls="NavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"><img src="./image/logo.png" height="100%"></span>
+            <span class="navbar-toggler-icon"><img src="./image/logo.png" height="70", width="80"></span>
         </button>
 
 
