updated index.html, added new projects

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-right"> student at UT Austin, full stack developer</h2>
+                        <h2 class="text-right"> UT Austin 2019, full stack developer</h2>
 
                     </div>
                 </div>
@@ -84,7 +84,7 @@
 
                 <p>Python, SQL, PostgreSQL, R, C#, MATLAB, PyMOL, JavaScript, HTML5, CSS</p><br>
                 <p>Django, Flask, ReactJS, Bootstrap4, Jinja</p><br>
-                <p>Git, Vim, Issue and Project Trackers, CI/CD pipelines, GCP, Agile methodologies, JIRA</p><br>
+                <p>Git, Vim, Issue and Project Trackers, CI/CD pipelines, GCP, Agile, unit testing</p><br>
                 <p>Spanish (native)</p>
             </div>
         </div>
@@ -94,14 +94,17 @@
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
-                <p>Intern @ Start-Up (current)</p>
+                <p>IT Intern @ Start-Up (Jan - May 2019)</p>
+                <p class="text-muted">Full-Stack Development</p>
+                <p><a href="https://austinmusicians.me/">Austin Musicians</a> (Jan - May 2019)</p>
                 <p class="text-muted">Full-Stack Development</p>
                 <p><a href="/blog/">go to blog</a></p>
-                <p>Co-Creator @ Fish Dreams (Winner)</p>
+                <p>Co-Creator @ Fish Dreams (ongoing)</p>
                 <p class="text-muted">Front-End, Research (2019)</p>
                 <p><a href="https://gitlab.com/adricar/fishdreams" target="_blank">gitlab</a></p>
                 <p><a href="https://medium.com/@experimentalcivics/success-for-austins-first-ever-life-sci-hackathon-brief-recap-of-impact-206494afb13e" target="_blank">hackathon article</a></p>
-
+                <p>Adverse Side Effects of Vaccines Analysis 2006-2016 (Jan - April 2019)</p>
+                <p class="text-muted">Data Analyst</p>
 
             </div>
         </div>
