--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
                     <a class="nav-link" href="./about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./blog.html">Blog</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
             </ul>
@@ -83,7 +80,7 @@
                 <h2 class="text-left">SKILLS</h2><br>
 
                 <p>Python, SQL, PostgreSQL, R, C#, MATLAB, PyMOL, JavaScript, HTML5, CSS</p><br>
-                <p>Django, Flask, ReactJS, Bootstrap4, Jinja</p><br>
+                <p>Django, Flask, React.js, Bootstrap4, Jinja</p><br>
                 <p>Git, Vim, Issue and Project Trackers, CI/CD pipelines, GCP, Agile, unit testing</p><br>
                 <p>Spanish (native)</p>
             </div>
