--- a/about.html
+++ b/about.html
@@ -58,8 +58,9 @@
             </div>
             <div class="col-md-5 col-sm-3">
                 <br>
-                            <p class="about">Biochemistry student minoring in Computer Science & Psychology @ UT Austin. </p>
-                            <p class="about">Python Developer + Creator + Saleswoman</p>
+                            <p class="about">UT Austin 2019</p>
+                            <p class="about">BSA Biochemistry with certificate in Elements of Computing & Psychology</p>
+                            <p class="about">Client-driven, organized, creative</p>
 
                         </div>
 
