--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
     <div class="row">
                     <br>
         <p>adri.cardenas@utexas.edu</p><br>
+        <a href="/6_6.pdf" download="Adriana Cardenas Resume">
+            download my resume
+        </a>
         <p>email for job opportunities OR personal website pricing $$$</p>
 
     </div>
