changed contact page

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <a href="/6_6.pdf" download="Adriana Cardenas Resume">
             download my resume
         </a>
-        <p>email for job opportunities OR personal website pricing $$$</p>
+        <p>email for job opportunities or inquiries</p>
 
     </div>
     <div class="row">
