--- a/contact.html
+++ b/contact.html
@@ -53,9 +53,9 @@
     <div class="row">
                     <br>
         <p>adri.cardenas@utexas.edu</p><br>
-        <br><a href="/6_6.pdf" download="Adriana Cardenas Resume">
+        <br><p><a href="/6_6.pdf" download="Adriana Cardenas Resume">
             download my resume
-        </a>
+    </a></p>
         <p>email for job opportunities or inquiries</p>
 
     </div>
