--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
-                <p>IT Intern @ Start-Up (Jan - May 2019)</p>
+                <p>Full Stack + Project Management Intern @ Nourish Ventures (Jan - May 2019)</p>
                 <p class="text-muted">Full-Stack Development</p>
                 <p><a href="https://austinmusicians.me/">Austin Musicians</a> (Jan - May 2019)</p>
                 <p class="text-muted">Full-Stack Development</p>
@@ -111,7 +111,7 @@
                 <div class="col-md-12 col-sm-5">
                     <h2 class="text-left">RESEARCH</h2><br>
                     <p>Behavioral Neuroscience Department @ UT </p>
-                    <p class="text-muted">Undergraduate Resarch Assistant (current)</p>
+                    <p class="text-muted">Undergraduate Resarch Assistant (2017-2019)</p>
                     <p><a href="https://labs.la.utexas.edu/gonzalez-lima/">projects</a></p>
 
                     <p>Synthesis & Biological Recognition Lab @ UT</p>
