--- a/contact.html
+++ b/contact.html
@@ -52,8 +52,8 @@
     </div>
     <div class="row">
                     <br>
-        <p>adri.cardenas@utexas.edu</p><br>
-        <br><p><a href="/6_6.pdf" download="Adriana Cardenas Resume">
+        <p>adri.cardenas@utexas.edu</p>
+        <p><a href="/6_6.pdf" download="Adriana Cardenas Resume">
             download my resume
     </a></p>
         <p>email for job opportunities or inquiries</p>
