--- a/contact.html
+++ b/contact.html
@@ -53,10 +53,10 @@
     <div class="row">
                     <br>
         <p>adri.cardenas@utexas.edu</p>
-        <p><a href="/3_18.pdf" download="Adriana Cardenas Resume">
-            download my resume
-    </a></p>
         <p>email for job opportunities or inquiries</p>
+        <p><a href="/3_18.pdf" download="Adriana Cardenas Resume">
+            download resume
+    </a></p>
 
     </div>
     <div class="row">
