--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">SKILLS</h2><br>
 
-                <p>Python, SQL, PostgreSQL, R, C#, MATLAB, PyMOL, JavaScript, HTML5, CSS</p><br>
-                <p>Django, Flask, React.js, Bootstrap4, Jinja</p><br>
-                <p>Git, Vim, Issue and Project Trackers, CI/CD pipelines, GCP, Agile, unit testing</p><br>
+                <p>Python, C#, JavaScript, SQL, jQuery, HTML5, CSS</p><br>
+                <p>.NET, MVC, Django, Flask, React.js, Bootstrap4</p><br>
+                <p>Git, Vim, Issue/Project Trackers, Release Management, GCP, Agile, Test-Driven Development</p><br>
                 <p>Spanish (native)</p>
             </div>
         </div>
@@ -91,6 +91,8 @@
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
+                <p>Software Engineer @ Soluta Health (Jan - May 2019)</p>
+                <p class="text-muted">C# Developer, SQL Database Engineer, Front-end </p>
                 <p>Full Stack + Project Management Intern @ Nourish Ventures (Jan - May 2019)</p>
                 <p class="text-muted">Full-Stack Development</p>
                 <p><a href="https://austinmusicians.me/">Austin Musicians</a> (Jan - May 2019)</p>
