--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                 <p>Python, C#, JavaScript, SQL, jQuery, HTML5, CSS</p><br>
                 <p>.NET, MVC, Django, Flask, React.js, Bootstrap4</p><br>
-                <p>Git, Vim, Issue/Project Trackers, Release Management, GCP, Agile, Test-Driven Development</p><br>
+                <p>Git, Vim, Issue/Project Trackers, Release Management, GCP, Agile, Test-Driven Development, JIRA, </p><br>
                 <p>Spanish (native)</p>
             </div>
         </div>
@@ -91,7 +91,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
-                <p>Software Engineer @ Soluta Health (Jan - May 2019)</p>
+                <p>Software Engineer @ Soluta Health (Aug 2019 - Current)</p>
                 <p class="text-muted">C# Developer, SQL Database Engineer, Front-end </p>
                 <p>Full Stack + Project Management Intern @ Nourish Ventures (Jan - May 2019)</p>
                 <p class="text-muted">Full-Stack Development</p>
