--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-right"> UT Austin 2019, full stack developer</h2>
+                        <h2 class="text-right"> UT Austin 2019, software engineer</h2>
 
                     </div>
                 </div>
