--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-right"> UT Austin 2019, software engineer</h2>
-
+                        <h2 class="text-right">software engineer since 2019</h2>
+                        <p><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
+                            resume download
+                    </a></p>
                     </div>
                 </div>
 
@@ -73,16 +75,18 @@
             </div>
         </div>
     </div>
-    <div class="container" id="skills"></div>
+
+    <div class="container" id="education"></div>
     <div class="container-info">
         <div class="row ">
             <div class="col-md-12 col-sm-5">
-                <h2 class="text-left">SKILLS</h2><br>
+                <h2 class="text-left">EDUCATION</h2><br>
 
-                <p>Python, C#, JavaScript, SQL, jQuery, HTML5, CSS</p><br>
-                <p>.NET, MVC, Django, Flask, React.js, Bootstrap4</p><br>
-                <p>Git, Vim, Issue/Project Trackers, Release Management, GCP, Agile, Test-Driven Development, JIRA, </p><br>
-                <p>Spanish (native)</p>
+                <p>University of Texas at Austin</p><br>
+                <p>B.S.A. Biochemistry, Minor in Computer Science, Minor in Psychology</p><br>
+                <p>McCombs School of Business</p><br>
+                <p>Health Technology & Health IT Post-Gradute Certificate</p>
+                <p></p>
             </div>
         </div>
     </div>
@@ -91,35 +95,54 @@
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
-                <p>Software Engineer @ Soluta Health (Aug 2019 - Current)</p>
-                <p class="text-muted">C# Developer, SQL Database Engineer, Front-end </p>
-                <p>Full Stack + Project Management Intern @ Nourish Ventures (Jan - May 2019)</p>
-                <p class="text-muted">Full-Stack Development</p>
-                <p>Co-Creator @ Fish Dreams (ongoing)</p>
-                <p class="text-muted">Front-End, Research (2019)</p>
-                <p><a href="https://gitlab.com/adricar/fishdreams" target="_blank">gitlab</a></p>
-                <p><a href="https://medium.com/@experimentalcivics/success-for-austins-first-ever-life-sci-hackathon-brief-recap-of-impact-206494afb13e" target="_blank">hackathon article</a></p>
+                <p>Software Engineer @ Social Solutions, Bonterra (April 2021 - September 2023)</p>
+                <p class="text-muted">C# .NET, React/Typescript, GraphQL, PostgreSQL, AWS</p>
+                <p>Software Engineer @ Soluta Health (Aug 2019 - March 2021)</p>
+                <p class="text-muted">C# ASP.NET MVC, SQL Server, JavaScript, jQuery </p>
+                <p>Software Engineer and Project Management Intern @ Nourish Ventures (Jan - May 2019)</p>
+                <p class="text-muted">Python/Django, agile</p>
+            </div>
+        </div>
+    </div>
 
+    <div class="container-info2">
+        <div class="row">
+            <div class="col-md-12 col-sm-5">
+                <h2 class="text-left">RECENT PROJECTS</h2><br>
+                <p>Chlorobo - Video Game (March 2021 - April 2021)</p>
+                <p class="text-muted">Software Architect and Project Management</p>
+                <p class="text-muted">The Cohen New Works festival submission</p>
+                <a href="https://vimeo.com/541119211">watch a playthrough of the finished project</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container" id="skills-1"></div>
+    <div class="container-info">
+        <div class="row ">
+            <div class="col-md-12 col-sm-5">
+                <h2 class="text-left">LANGUAGES & FRAMEWORKS</h2><br>
+                <p>Spanish (native)</p>
+                <p>C#, React, Typescript, JavaScript, SQL</p><br>
+                <p>Python, PHP, VBScript, HTML5, CSS3</p>
+                <p>React.js, React Hooks, Redux, NodeJS, jQuery, Bootstrap</p><br>
+                <p>.NET Core 3-6, ASP.NET MVC, Entity Framework, Zend, OpenAPI</p>                
+                <p>SQL Server, PostgreSQL, MySQL, GraphQL</p><br>
             </div>
         </div>
     </div>
 
     <div class="container-info3">
         <div class="row">
-                <div class="col-md-12 col-sm-5">
-                    <h2 class="text-left">RESEARCH</h2><br>
-                    <p>Behavioral Neuroscience Department @ UT </p>
-                    <p class="text-muted">Undergraduate Resarch Assistant (2017-2019)</p>
-                    <p><a href="https://labs.la.utexas.edu/gonzalez-lima/">projects</a></p>
-
-                    <p>Synthesis & Biological Recognition Lab @ UT</p>
-                    <p class="text-muted">Undergraduate Research Assistant (2014)</p>
-
-
-
-                </div>
+            <div class="col-md-12 col-sm-5">
+                <h2 class="text-left">UNDERGRADUATE RESEARCH</h2><br>
+                <p>Behavioral Neuroscience Department @ UT </p>
+                <p class="text-muted">Undergraduate Resarch Assistant (2017-2019)</p>
+                <p><a href="https://labs.la.utexas.edu/gonzalez-lima/">projects</a></p>
+                <p>Synthesis & Biological Recognition Lab @ UT</p>
+                <p class="text-muted">Undergraduate Research Assistant (2014)</p>
+            </div>
         </div>
-
     </div>
 
 
