update wording and css

--- a/index.html
+++ b/index.html
@@ -58,14 +58,13 @@
                 <div class="row">
                     <div class="col">
                         <h2 class="text-right">software engineer since 2019</h2>
-                        <p><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
+                        <p class="text-right"><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
                             resume download
                     </a></p>
-                    </div>
                 </div>
-
             </div>
         </div>
+    </div>
 
     </div>
     <div class="container">
@@ -83,9 +82,9 @@
                 <h2 class="text-left">EDUCATION</h2><br>
 
                 <p>University of Texas at Austin</p><br>
-                <p>B.S.A. Biochemistry, Minor in Computer Science, Minor in Psychology</p><br>
+                <p class="text-muted">B.S.A. Biochemistry, Minor in Computer Science, Minor in Psychology</p><br>
                 <p>McCombs School of Business</p><br>
-                <p>Health Technology & Health IT Post-Gradute Certificate</p>
+                <p class="text-muted">Health Technology & Health IT Post-Gradute Certificate</p>
                 <p></p>
             </div>
         </div>
@@ -105,20 +104,19 @@
         </div>
     </div>
 
-    <div class="container-info2">
+    <div class="container-info6">
         <div class="row">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">RECENT PROJECTS</h2><br>
                 <p>Chlorobo - Video Game (March 2021 - April 2021)</p>
-                <p class="text-muted">Software Architect and Project Management</p>
+                <p class="text-muted">Software Architect, Developer, and Project Management</p>
                 <p class="text-muted">The Cohen New Works festival submission</p>
                 <a href="https://vimeo.com/541119211">watch a playthrough of the finished project</a>
             </div>
         </div>
     </div>
 
-    <div class="container" id="skills-1"></div>
-    <div class="container-info">
+    <div class="container-info5">
         <div class="row ">
             <div class="col-md-12 col-sm-5">
                 <h2 class="text-left">LANGUAGES & FRAMEWORKS</h2><br>
