--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
                     <br>
-        <p>adri.cardenas@utexas.edu</p>
+        <p>adcard78@gmail.com</p>
         <p>email for job opportunities or inquiries</p>
         <p><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
             download resume
