--- a/about.html
+++ b/about.html
@@ -58,9 +58,9 @@
             </div>
             <div class="col-md-5 col-sm-3">
                 <br>
-                            <p class="about">UT Austin 2019</p>
-                            <p class="about">BSA Biochemistry with certificate in Elements of Computing & Psychology</p>
-                            <p class="about">Client-driven, organized, creative</p>
+                            <p class="about">UT Austin Graduate</p>
+                            <p class="about">4+ years of software engineering experience...</p>
+                            <p class="about">Creative, client-driven, organized</p>
 
                         </div>
 
