css updates and resume change

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div class="container" id="education"></div>
     <div class="container-info">
         <div class="row ">
-            <div class="col-md-12 col-sm-5">
+            <div class="col-md-12 col-sm-12">
                 <h2 class="text-left">EDUCATION</h2><br>
 
                 <p>University of Texas at Austin</p><br>
@@ -90,9 +90,9 @@
         </div>
     </div>
 
-    <div class="container-info2">
+    <div class="container-exp" id="technical-experience">
         <div class="row">
-            <div class="col-md-12 col-sm-5">
+            <div class="col-md-12 col-sm-12">
                 <h2 class="text-left">TECHNICAL EXPERIENCE</h2><br>
                 <p>Software Engineer @ Social Solutions, Bonterra (April 2021 - September 2023)</p>
                 <p class="text-muted">C# .NET, React/Typescript, GraphQL, PostgreSQL, AWS</p>
@@ -104,21 +104,28 @@
         </div>
     </div>
 
-    <div class="container-info6">
+    <div class="container-projects" id="projects">
         <div class="row">
-            <div class="col-md-12 col-sm-5">
+            <div class="col-md-12 col-sm-12">
                 <h2 class="text-left">RECENT PROJECTS</h2><br>
                 <p>Chlorobo - Video Game (March 2021 - April 2021)</p>
                 <p class="text-muted">Software Architect, Developer, and Project Management</p>
                 <p class="text-muted">The Cohen New Works festival submission</p>
                 <a href="https://vimeo.com/541119211">watch a playthrough of the finished project</a>
+                <br>
+                <!-- <br>
+                <br>
+                <img src="./image/chlorobo.png" class="float-center" width="350" height="250" alt="chlorobo screenshot">
+                <img src="./image/chloroboss1.png" class="float-center" width="350" height="250" alt="chlorobo boss 1">
+                <img src="./image/chloroboss2.png" class="float-center" width="350" height="250" alt="chlorobo boss 2"> -->
+
             </div>
         </div>
     </div>
 
-    <div class="container-info5">
+    <div class="container-languages" id="languages">
         <div class="row ">
-            <div class="col-md-12 col-sm-5">
+            <div class="col-md-12 col-sm-12">
                 <h2 class="text-left">LANGUAGES & FRAMEWORKS</h2><br>
                 <p>Spanish (native)</p>
                 <p>C#, React, Typescript, JavaScript, SQL</p><br>
@@ -130,9 +137,9 @@
         </div>
     </div>
 
-    <div class="container-info3">
+    <div class="container-research" id="research">
         <div class="row">
-            <div class="col-md-12 col-sm-5">
+            <div class="col-md-12 col-sm-12">
                 <h2 class="text-left">UNDERGRADUATE RESEARCH</h2><br>
                 <p>Behavioral Neuroscience Department @ UT </p>
                 <p class="text-muted">Undergraduate Resarch Assistant (2017-2019)</p>
