more descriptive, fix css

--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
     <!--- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="stylesheet" type="text/css" href="./css/about.css">
+
 
 
 </head>
@@ -47,25 +49,23 @@
     </nav>
     <div class="page-container">
         <div class="container-about">
-        <div class="row">
-            <div class="col-md-12 col-sm-5">
-                    <h2 class="text-left">ABOUT ADRIANA</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-7 col-sm-3">
-                <img src="image/me.jpg" class="img-fluid2" alt="me" height="100px">
-            </div>
-            <div class="col-md-5 col-sm-3">
-                <br>
-                            <p class="about">UT Austin Graduate</p>
-                            <p class="about">4+ years of software engineering experience...</p>
-                            <p class="about">Creative, client-driven, organized</p>
-
-                        </div>
-
-
+            <div class="row">
+                <div class="col-md-12 col-sm-5">
+                        <h2 class="text-left">ABOUT ADRIANA</h2>
                 </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-sm-12">
+                    <img src="image/me.jpg" class="img-fluid2" alt="me" height="100px">
+                </div>
+                <div class="col-md-6 col-sm-12">
+                    <br>
+                    <p class="about">Hi!</p>
+                    <p class="about">I'm an extroverted full-stack software engineer based out of Austin, TX. </p>
+                    <p class="about">I specialize in building and scaling customer-facing microservices.</p>
+                    <p class="about">When I'm not building apps, you can find me out in my garden or spinning tracks as a DJ.</p>
+                </div>
+            </div>
         </div>
     </div>
 
