--- a/index.html
+++ b/index.html
@@ -52,28 +52,27 @@
             <div class="col">
                 <div class="row">
                     <div class="col">
-                    <h1 class="text-right">adriana cardenas</h1>
+                    <h1 class="text-left">adriana cardenas</h1>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h2 class="text-right">software engineer since 2019</h2>
-                        <p class="text-right"><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
+                        <h2 class="text-left">software engineer since 2019</h2>
+                        <p class="text-left"><a href="/AdrianaCardenas_Resume.pdf" download="Adriana Cardenas Resume">
                             resume download
                     </a></p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-
-    </div>
-    <div class="container">
+    <!-- <div class="container">
         <div class="row pointer-row justify-content-center">
             <div class="col-lg-1 col-md-2 col-sm-3 col-xs-2">
                 <a href="#skills"><img src="./image/point_down.png" class="img-fluid float-right" alt="pointer" height="50px"></a>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="container" id="education"></div>
     <div class="container-info">
